versions/v2.9/modules/en/pages/integrations/neuvector/neuvector.adoc
= {neuvector-product-name}
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: integrations-in-rancher/neuvector/index.adoc 
:product-path: integrations/neuvector/neuvector.adoc

NeuVector is the only 100% open source, Zero Trust container security platform. Continuously scan throughout the container lifecycle. Remove security roadblocks. Bake in security policies at the start to maximize developer agility. NeuVector provides vulnerability and compliance scanning and management from build to production. The unique NeuVector run-time protection protects network connections within and ingress/egress to the cluster with a Layer7 container firewall. Additionally, NeuVector monitors process and file activity in containers and on hosts to stop unauthorized activity.

== {neuvector-product-name} with Rancher

All NeuVector features are available through Rancher with integrated deployment and single-sign on to the NeuVector console. Rancher cluster admins are able to deploy and manage the NeuVector deployment on their clusters and easily configure NeuVector through Helm values, configMaps, custom resource definitions (CRDs) and the NeuVector console.

With NeuVector and Rancher:

* Deploy, manage and secure multiple clusters.
* Manage and report vulnerabilities and compliance results for Rancher workloads and nodes.

== {neuvector-product-name} Prime with {rancher-prime}

The NeuVector UI Extension for Rancher Manager is available and supported for Rancher Prime and NeuVector Prime customers. This extension provides:

* Automated deployment of NeuVector, including the Rancher Prime NeuVector Extension dashboard.
* Access to important security information from each cluster, such as critical security events, vulnerability scan results, and ingress/egress exposures.
* Integrated vulnerability (CVE) and compliance scan results directly in Rancher resources such as nodes and containers/pods.
* Integrated actions such as manual triggers of scans on Rancher resources.
